--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
     <!-- كرت 2 -->
     <article class="glass p-5 rounded-xl shadow-lg hover:shadow-yellow-400 transition-shadow duration-300 cursor-pointer">
       <img
-        src="/img/سبب-بناء-معبد-الكرنك-وأبرز-مميزاته.jpg"
+        src="img/7.jpeg"
         alt="معبد الكرنك"
         class="text-yellow-300 text-xl font-semibold mb-2"
         loading="lazy"
