--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
       <img src="/img/2..jpeg" alt="أثر 10" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
     </div>
     <div class="overflow-hidden rounded-xl shadow-lg group transform transition duration-500 hover:scale-105 hover:shadow-yellow-500 hover:-translate-y-1">
-      <img src="/img/10.jpeg" alt="أثر 10" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
+      <img src="/img/10.jpg" alt="أثر 10" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
     </div>
     <div class="overflow-hidden rounded-xl shadow-lg group transform transition duration-500 hover:scale-105 hover:shadow-yellow-500 hover:-translate-y-1">
       <img src="/img/11.jpeg" alt="أثر 10" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
