--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
     <!-- وكرر ذلك لباقي الصور -->
 
     <div class="overflow-hidden rounded-xl shadow-lg group transform transition duration-500 hover:scale-105 hover:shadow-yellow-500 hover:-translate-y-1">
-      <img src="/img/1.jpg" alt="أثر 9" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
+      <img src="https://img.youm7.com/ArticleImgs/2020/9/21/64301-2020-09-16T131215Z_1967400141_RC2PZI992QO6_RTRMADP_3_EGYPT-NILE-HISTORY.jpg" alt="أثر 9" class="w-full h-48 object-cover transition duration-500 group-hover:scale-110">
     </div>
 
     <div class="overflow-hidden rounded-xl shadow-lg group transform transition duration-500 hover:scale-105 hover:shadow-yellow-500 hover:-translate-y-1">
